fix position heading alignment

--- a/src/styles/Position.module.css
+++ b/src/styles/Position.module.css
@@ -13,6 +13,7 @@
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .title {
@@ -23,6 +24,7 @@
 
 .scoringFormat {
   color: var(--font-color-sec);
+  display: flex;
 }
 
 .name {
